# tartan_forklift

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  core5_config.yaml  cyclone_dds.xml  dev.sh  entrypoint.sh  lxo_config.yaml  metadata_generator.py  parquet-convertor.py  resources.json  rhaegal_config.yaml  rhaegal_data_params.yaml  runtime.sh  test_rhaegal_local_config.yaml  upload_vehicle_data.py  vehicle_data_params.yaml
config/: av_sensor_export_config.yaml  dataset_attributes.json
metadata/: metadata.md  resources.json
rosbag_downloader/: download_rosbags.py
rosbag_util/: gps_localisaton_merge_params.yaml  mapping_extract_params.yaml  mapping_merge_params.yaml  merge_rosbags.py  rosbag_extract.py
scripts/: pyproject.toml
scripts/data_manager/: __init__.py  data_manager.py  new_rosbag_watchdog.py  new_rosbags_watchdog.py  rosbag_metadata_parser.py
scripts/labelling_preproc/: __init__.py  __main__.py  add_segmentsai_sample.py  dataset_creator.py  generate_ego_trajectory.py  upload_data.py
scripts/labelling_preproc/common/: __init__.py  camera_calibration_parser.py  ego_setup.py  response.py  s3_client.py  sample_formats.py  segments_client_wrapper.py  segments_wrapper_client.py  sensor_frame_ceator.py  sensor_frame_creator.py  transform_tree.py  types.py  utils.py
scripts/s3_backup_agent/: __init__.py  s3_backup_agent.py
upload_rosbags/: __init__.py  __main__.py  compress_rosbags.py  pyproject.toml  upload_config.yaml  upload_rosbags.py
upload_rosbags/modules/: compression_manager.py  config_parser.py  data_types.py  ssh_client.py
(+2 files in other folders)
