[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tartan_forklift"
version = "0.1.0"
description = "A collection of tools for pre/post processing IPAB vehicle data."
authors = [{ name = "Hector Cruz", email = "hcruzgo@ed.ac.uk" }]
dependencies = []

[tool.setuptools]
packages = ["labelling_preproc", "labelling_preproc.common",
            "data_manager"]

[project.scripts]
generate_ego_trajectory = "labelling_preproc.generate_ego_trajectory:main"
upload_data = "labelling_preproc.upload_data:main"
add_segmentsai_sample = "labelling_preproc.add_segmentsai_sample:main"
